# alt-enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_val.rs
